--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name    = App-Fetchware
-author  = David Yingling <deeelwy@yahoo.com>
+author  = David Yingling <deeelwy@gmail.com>
 license = Perl_5
 copyright_holder = David Yingling
 copyright_year   = 2011
@@ -7,3 +7,5 @@ copyright_year   = 2011
 version = 0.001
 
 [@Basic]
+# need some modules *only* on Windows.
+# So far just Win32 for Win32::LoginName().
