--- a/dist.ini
+++ b/dist.ini
@@ -2,10 +2,74 @@ name    = App-Fetchware
 author  = David Yingling <deeelwy@gmail.com>
 license = Perl_5
 copyright_holder = David Yingling
-copyright_year   = 2011
+copyright_year   = 2012
 
-version = 0.001
+version = 1.000
 
-[@Basic]
-# need some modules *only* on Windows.
-# So far just Win32 for Win32::LoginName().
+
+[GatherDir]
+[PruneCruft]
+; Prune vim temp files and test html files in case I forget to do dzil clean.
+[PruneFiles]
+match = ^.*?~$
+match = ^.*?\.html$
+[ManifestSkip]
+[MetaYAML]
+[License]
+[Readme]
+[ExecDir]
+[ShareDir]
+[MakeMaker]
+[Manifest]
+; Skip autouploading to CPAN.
+;[UploadToCPAN]
+; Don't need to confirm it, if I'm not going to do it.
+;[ConfirmRelease]
+
+; Add extra release only tests CPAN authors are expected to use.
+[ExtraTests]
+[Test::Perl::Critic]
+[PodCoverageTests]
+[PodSyntaxTests]
+
+; Use NextRelease to automate updating the Changes file.
+; Basically requires UploadToCPAN to completely work right.
+; Why not just use it!!!
+;;;BUGALERT;;; Use UploadToCpan!!!
+[NextRelease]
+
+[PodWeaver]
+
+; List of non-core (as of 5.10.01) prereqs.
+[Prereqs]
+Test::More = 0.98
+Path::Class = 0
+Perl::OSType = 0
+URI::Split = 0
+Getopt::Long = 0
+Archive::Tar = 0
+Archive::Zip = 0
+Term::UI = 0
+File::HomeDir = 0
+HTTP::Tiny = 0
+HTML::TreeBuilder = 0
+Digest::SHA = 0
+Digest::MD5 = 0
+; Remove this dependency!!! And just natively use Archive::{Tar,Zip}, which are
+; already requirements anyway.
+Archive::Extract = 0
+; Not counting core modules such as File::Spec, Text::Wrap, Data::Dumper,
+; File::Find, Net::FTP, Fcntl, File::Path, File::Copy, and perhaps others.
+
+; Test::Deep is *only* used during testing, so say so.
+[Prereqs / TestRequires]
+Test::Deep = 0
+
+; Need some modules *only* on Windows.
+; So far just Win32 for Win32::LoginName().
+[OSPrereqs / MSWin32]
+Win32 = 0
+
+
+
+
