Added inital documentation to Test::Fetchware.
I also updated Pod::Weaver's weaver.ini to refelect the sections of documenation
I created.

--- a/weaver.ini
+++ b/weaver.ini
@@ -15,8 +15,11 @@
 ; have, and then Pod::Weaver will simply not include sections that don't exist.
 [Generic / SYNOPSIS]
 [Generic / DESCRIPTION]
+; Am i gonna use this????????????????????????????????????????????????????
 [Generic / OVERVIEW]
 
+; Add Test::Fetchware's specific head1.
+[Generic / TESTING SUBROUTINES]
 ; Use this stype for if I choose to use =class_method (like a sucky head2 tag)
 [Collect / CLASS METHODS]
 command = class_method
@@ -45,6 +48,7 @@ command = conn_method
 [Collect / SERVER METHODS]
 command = serv_method
 
+; ERRORS and DIAGNOSTICS will be put here with [Leftovers].
 [Leftovers]
 [Region  / postlude]
 [Authors]
