Added documentation to App::Fetchware::Config.
I also updated Pod::Weaver's weaver.ini appropriately.

--- a/weaver.ini
+++ b/weaver.ini
@@ -20,6 +20,7 @@
 
 ; Add Test::Fetchware's specific head1.
 [Generic / TESTING SUBROUTINES]
+[Generic / CONFIG SUBROUTINES]
 ; Use this stype for if I choose to use =class_method (like a sucky head2 tag)
 [Collect / CLASS METHODS]
 command = class_method
@@ -49,6 +50,7 @@ command = conn_method
 command = serv_method
 
 ; ERRORS and DIAGNOSTICS will be put here with [Leftovers].
+; As well as CAVEATS, BUGS, and RESTRICTIONS.
 [Leftovers]
 [Region  / postlude]
 [Authors]
