Added documentation to App::Fetchware::Util.
And the necessary stuff to my Pod::Weaver weaver.ini file.

--- a/weaver.ini
+++ b/weaver.ini
@@ -18,9 +18,16 @@
 ; Am i gonna use this????????????????????????????????????????????????????
 [Generic / OVERVIEW]
 
+; App::Fetchware::Util's specific head1's
+[Generic / LOGGING SUBROUTINES]
+[Generic / EXTERNAL COMMAND SUBROUTINES]
+[Generic / DOWNLOAD SUBROUTINES]
+[Generic / MISCELANEOUS SUBROUTINES]
+[Generic / TEMPDIR SUBROUTINES]
 ; Add Test::Fetchware's specific head1.
-[Generic / TESTING SUBROUTINES]
 [Generic / CONFIG SUBROUTINES]
+[Generic / TESTING SUBROUTINES]
+
 ; Use this stype for if I choose to use =class_method (like a sucky head2 tag)
 [Collect / CLASS METHODS]
 command = class_method
