Added HTMLPageSync's initial documentation.
And I also added its PODWeaver configuration to weaver.ini too.

This documentation will also be used as a template for App::Fetchware's
documentation.

--- a/weaver.ini
+++ b/weaver.ini
@@ -14,18 +14,29 @@
 ; files, but I can specify the order I want the combined sections that all files
 ; have, and then Pod::Weaver will simply not include sections that don't exist.
 [Generic / SYNOPSIS]
+; App::Fetchware::HTMLPageSync's MOTOVATION section.
+[Generic / MOTOVATION]
 [Generic / DESCRIPTION]
 ; Am i gonna use this????????????????????????????????????????????????????
 [Generic / OVERVIEW]
 
-; App::Fetchware::Util's specific head1's
+; App::Fetchware's specific head1's.
+[Generic / ]
+; App::Fetchware::HTMLPageSync's specific head1's.
+[Generic / CREATING A App::Fetchware::HTMLPageSync FETCHWAREFILE]
+[Generic / USING YOUR App::Fetchware::HTMLPageSync FETCHWAREFILE WITH FETCHWARE]
+[Generic / App::Fetchware::HTMLPageSync API SUBROUTINES]
+[Generic / HOW App::Fetchware::HTMLPageSync OVERRIDES App::Fetchware]
+
+; App::Fetchware::Util's specific head1's.
 [Generic / LOGGING SUBROUTINES]
 [Generic / EXTERNAL COMMAND SUBROUTINES]
 [Generic / DOWNLOAD SUBROUTINES]
 [Generic / MISCELANEOUS SUBROUTINES]
 [Generic / TEMPDIR SUBROUTINES]
-; Add Test::Fetchware's specific head1.
+; Add App::Fetchware::Config's specific head1.
 [Generic / CONFIG SUBROUTINES]
+; Add Test::Fetchware's specific head1.
 [Generic / TESTING SUBROUTINES]
 
 ; Use this stype for if I choose to use =class_method (like a sucky head2 tag)
