Added some POD to App::Fetchware.
App::Fetchware's documentation still has a long way to go, but I added a bunch
of stuff based on HTMLPageSync's documentation that has documented how to
manually create a Fetchwarefile without fetchware new.

Next, I'll update App::Fetchware's DESCRIPTION with a much better one. I'll even
consider using OVERVIEW, which seems appropriate for App::Fetchware and perhaps
bin/fetchware, but the others can skip it. App::Fetchware needs some internals
docs. The override() crap needs to go. Docs for creating a App::Fetchware
extension need to be written too.

--- a/weaver.ini
+++ b/weaver.ini
@@ -21,7 +21,9 @@
 [Generic / OVERVIEW]
 
 ; App::Fetchware's specific head1's.
-[Generic / ]
+[Generic / MANUALLY CREATING A App::Fetchware FETCHWAREFILE]
+[Generic / USING YOUR App::Fetchware FETCHWAREFILE WITH FETCHWARE]
+[Generic / FETCHWAREFILE API SUBROUTINES]
 ; App::Fetchware::HTMLPageSync's specific head1's.
 [Generic / CREATING A App::Fetchware::HTMLPageSync FETCHWAREFILE]
 [Generic / USING YOUR App::Fetchware::HTMLPageSync FETCHWAREFILE WITH FETCHWARE]
@@ -34,8 +36,10 @@
 [Generic / DOWNLOAD SUBROUTINES]
 [Generic / MISCELANEOUS SUBROUTINES]
 [Generic / TEMPDIR SUBROUTINES]
+
 ; Add App::Fetchware::Config's specific head1.
 [Generic / CONFIG SUBROUTINES]
+
 ; Add Test::Fetchware's specific head1.
 [Generic / TESTING SUBROUTINES]
 
