--- a/dist.ini
+++ b/dist.ini
@@ -6,6 +6,12 @@ copyright_year   = 2012
 
 version = 1.000
 
+; Change bugtracker to github
+;;;;;BUGALERT;;;;;;;;; must actually change the values below to the appropriate
+;values!!!!!!!!!!!!
+;bugtracker.web    = http://rt.perl.org/rt3/
+;bugtracker.mailto = perlbug@perl.org
+
 
 [GatherDir]
 [PruneCruft]
