Added more App::Fetchware =head1's to Pod::Weaver's weaver.ini.

--- a/weaver.ini
+++ b/weaver.ini
@@ -17,13 +17,23 @@
 ; App::Fetchware::HTMLPageSync's MOTOVATION section.
 [Generic / MOTOVATION]
 [Generic / DESCRIPTION]
-; Am i gonna use this????????????????????????????????????????????????????
-[Generic / OVERVIEW]
+
+; bin/fetchware's specific head1's.
+[Generic / COMMANDS]
+[Generic / OPTIONS]
+[Generic / HOW FETCHWARE WORKS]
+[Generic / INTERNAL SUBROUTINES IMPLEMENTING FETCHWARE COMMANDS]
+[Generic / INTERNAL LIBRARY SUBROUTINES]
 
 ; App::Fetchware's specific head1's.
+[Generic / CREATING A App::Fetchware FETCHWAREFILE]
 [Generic / MANUALLY CREATING A App::Fetchware FETCHWAREFILE]
 [Generic / USING YOUR App::Fetchware FETCHWAREFILE WITH FETCHWARE]
+[Generic / App::Fetchware'S FETCHWAREFILE CONFIGURATION OPTIONS]
+[Generic / FURTHER CUSTOMIZING YOUR FETCHWAREFILE]
+[Generic / CREATING A FETCHWARE EXTENSION]
 [Generic / FETCHWAREFILE API SUBROUTINES]
+
 ; App::Fetchware::HTMLPageSync's specific head1's.
 [Generic / CREATING A App::Fetchware::HTMLPageSync FETCHWAREFILE]
 [Generic / USING YOUR App::Fetchware::HTMLPageSync FETCHWAREFILE WITH FETCHWARE]
