Added mirror and user (priviledge dropping) support to Util.
Mirror will work transparently, because support was added to download_dirlist()
and download_file(), which are nice very black black boxes fetchware uses.

However, privilege droping support requires changes to bin/fetchware. I'm not
completely sure how I'll add this, but that's where it will go.

Privilege dropping is more than just messing with $< and $> and perhaps $( and
$), so I added Privileges::Drop as a dependency to dist.ini.

--- a/dist.ini
+++ b/dist.ini
@@ -61,6 +61,9 @@ HTTP::Tiny = 0
 HTML::TreeBuilder = 0
 Digest::SHA = 0
 Digest::MD5 = 0
+; Installs ok on Windows, but doesn't do much.
+; Fetchware only uses it on Unix.
+Privileges::Drop = 0
 ; Not counting core modules such as File::Spec, Text::Wrap, Data::Dumper,
 ; File::Find, Net::FTP, Fcntl, File::Path, File::Copy, and perhaps others.
 
