Added note regarding MANIFEST.SKIPing the xt directory if I create one.

--- a/dist.ini
+++ b/dist.ini
@@ -19,6 +19,7 @@ version = 1.000
 [PruneFiles]
 match = ^.*?~$
 match = ^.*?\.html$
+; Add the xt directory for author tests to skip shipping them in CPAN dists?
 [ManifestSkip]
 [MetaYAML]
 [License]
