--- a/dist.ini
+++ b/dist.ini
@@ -2,7 +2,7 @@ name    = App-Fetchware
 author  = David Yingling <deeelwy@gmail.com>
 license = Perl_5
 copyright_holder = David Yingling
-copyright_year   = 2012
+copyright_year   = 2013
 
 version = 1.000
 
@@ -49,6 +49,7 @@ match = ^.*?\.html$
 
 ; List of non-core (as of 5.10.01) prereqs.
 [Prereqs]
+; Test::More 0.98 is needed for proper subtest support.
 Test::More = 0.98
 Path::Class = 0
 Perl::OSType = 0
