Fixed URI::Split's dependency, because it's part of URI not its own distribution.

--- a/dist.ini
+++ b/dist.ini
@@ -53,7 +53,7 @@ match = ^.*?\.html$
 Test::More = 0.98
 Path::Class = 0
 Perl::OSType = 0
-URI::Split = 0
+URI = 0
 Getopt::Long = 0
 Archive::Tar = 0
 Archive::Zip = 0
