Fixed testing bugs relating to using dzil test instead of just prove.
For fetchware's entire life I've mostly ignored dzil barely ever editing
dist.ini and weaver.ini. But now the time has come to debug my dzil setup and
release fetchware. So, this commit fixes many bugs in fetchware's test suite too
numerous to list. I probably should have broken this commit up into pieces, but
it's much too late for that now.

Fetchware's main libraries also have changes, because things needed to change to
fix the bugs found in the test suite.

However, one bug is unfixable by me unless I learn dzil and MakeMaker internals,
which I have zero interest it. I'd rather ditch dzil, and manage fetchware
manually that learn how MakeMaker works. I also barely know Makefile syntax, and
the Makefile MakeMaker generates is insane, and full of crazy macros everywhere.

So, I'm going to push fetchware to my github account, and ask the folks on the
dzil mailing list for some help about the bizarre bug when running make test
with frt *not* set. It works fine when set, but explodes with it's unset. For
some reason make clean is run while make test is still running deleting all of
the fetchware libraries in the blib directory which are used for testing. At
least that's what the TEST_VERBOSE=1 output indicates.

But next I'm goint to polish my Pod::Weaver setup, and then push fetchware to
github asking for help.

--- a/dist.ini
+++ b/dist.ini
@@ -24,17 +24,16 @@ match = ^.*?\.html$
 [MetaYAML]
 [License]
 [Readme]
+[ExtraTests]
 [ExecDir]
 [ShareDir]
 [MakeMaker]
 [Manifest]
-; Skip autouploading to CPAN.
-;[UploadToCPAN]
-; Don't need to confirm it, if I'm not going to do it.
-;[ConfirmRelease]
+[TestRelease]
+[ConfirmRelease]
+[UploadToCPAN]
 
 ; Add extra release only tests CPAN authors are expected to use.
-[ExtraTests]
 [Test::Perl::Critic]
 [PodCoverageTests]
 [PodSyntaxTests]
