Fixed misc. Pod::Weaver and POD errors and updated weaver.ini.

--- a/weaver.ini
+++ b/weaver.ini
@@ -37,8 +37,8 @@
 ; App::Fetchware::HTMLPageSync's specific head1's.
 [Generic / CREATING A App::Fetchware::HTMLPageSync FETCHWAREFILE]
 [Generic / USING YOUR App::Fetchware::HTMLPageSync FETCHWAREFILE WITH FETCHWARE]
-[Generic / App::Fetchware::HTMLPageSync API SUBROUTINES]
 [Generic / HOW App::Fetchware::HTMLPageSync OVERRIDES App::Fetchware]
+[Generic / App::FetchwareX::HTMLPageSync API SUBROUTINES]
 
 ; App::Fetchware::Util's specific head1's.
 [Generic / LOGGING SUBROUTINES]
