Added first draft of a README for Fetchware.
This commit also disables dzil creating a README for me by commenting out the
[Readme] plugin in dist.ini

I'm adding my own README, because Fetchware is not a CPAN module, so it's README
file will actually be read by people, so I want it to be helpful instead of
mostly useless.

--- a/dist.ini
+++ b/dist.ini
@@ -23,7 +23,8 @@ match = ^.*?\.html$
 [ManifestSkip]
 [MetaYAML]
 [License]
-[Readme]
+; Comment out Readme Plugin, because Fetchware provides its own README.
+;[Readme]
 [ExtraTests]
 [ExecDir]
 [ShareDir]
