Fixed run_progs() splitting up its arguments properly with quotes bug.
Fixed the bug mentioned above using Text::ParseWords. Adding another dependency
is annoying, but it's a small one, and solving the surprisingly non-trivial
problem myself would be a waste of time better spent elsewhere.

I also added Text::ParseWords to dist.ini's list of Prereqs.

And I created an EXAMPLE FETCHWAREFILES section in App::Fetchware's POD
documentation to list the example Fetchwarefile's I'm going to create to put
Fetchware through its paces before I properly release it.

Next, up is fixing a weird bug in append_options_to_fetchwarefile(), where it
includes the description for mirror each time a mirror is added, which is silly.

--- a/dist.ini
+++ b/dist.ini
@@ -68,6 +68,7 @@ Digest::MD5 = 0
 Privileges::Drop = 0
 ; Not counting core modules such as File::Spec, Text::Wrap, Data::Dumper,
 ; File::Find, Net::FTP, Fcntl, File::Path, File::Copy, and perhaps others.
+Text::ParseWords = 0
 
 ; Test::Deep is *only* used during testing, so say so.
 [Prereqs / TestRequires]
