Polished up the README for release.
It included adding a comment to dist.ini to update the list of prereqs in the
README if I ever add any to dist.ini

--- a/dist.ini
+++ b/dist.ini
@@ -48,6 +48,7 @@ match = ^.*?\.html$
 [PodWeaver]
 
 ; List of non-core (as of 5.10.01) prereqs.
+; Remember to make any changes to the list of prereqs in the README.
 [Prereqs]
 ; Test::More 0.98 is needed for proper subtest support.
 Test::More = 0.98
