Added github info to dist.ini.

--- a/dist.ini
+++ b/dist.ini
@@ -7,10 +7,11 @@ copyright_year   = 2013
 version = 1.000
 
 ; Change bugtracker to github
-;;;;;BUGALERT;;;;;;;;; must actually change the values below to the appropriate
-;values!!!!!!!!!!!!
-;bugtracker.web    = http://rt.perl.org/rt3/
-;bugtracker.mailto = perlbug@perl.org
+[MetaResources]
+bugtracker.web    = https://github.com/deeelwy/Fetchware/issues
+repository.url    = https://github.com/deeelwy/Fetchware.git
+repository.web    = https://github.com/deeelwy/Fetchware
+repository.type   = git
 
 
 [GatherDir]
