Added Sub::Mage as a dependency to dist.init.

--- a/dist.ini
+++ b/dist.ini
@@ -50,6 +50,8 @@ match = ^.*?\.html$
 
 ; List of non-core (as of 5.10.01) prereqs.
 ; Remember to make any changes to the list of prereqs in the README.
+;;;BUGALERT;;; Sometimes modules are removed from Perl's included library, so
+;perhaps I should just list all used modules regardless of core or not?
 [Prereqs]
 ; Test::More 0.98 is needed for proper subtest support.
 Test::More = 0.98
@@ -71,6 +73,7 @@ Privileges::Drop = 0
 ; Not counting core modules such as File::Spec, Text::Wrap, Data::Dumper,
 ; File::Find, Net::FTP, Fcntl, File::Path, File::Copy, and perhaps others.
 Text::ParseWords = 0
+Sub::Mage = 0
 
 ; Test::Deep is *only* used during testing, so say so.
 [Prereqs / TestRequires]
