Added @Git dzil plugin support to my dzil config.

--- a/dist.ini
+++ b/dist.ini
@@ -46,6 +46,12 @@ match = ^.*?\.html$
 ;;;BUGALERT;;; Use UploadToCpan!!!
 [NextRelease]
 
+; Use @Git bundle to check for uncommitted changes, commit my new Changes file
+; that NextRelease makes, tag git forme, and push these new changes to github.
+[@Git]
+; Change tag formath to App-Fetchware-1.00 instead of just v1.00.
+tag_format = %N-$v
+
 [PodWeaver]
 
 ; List of non-core (as of 5.10.01) prereqs.
