Fixed @Git bug $v must be a printf like %v instead.

--- a/dist.ini
+++ b/dist.ini
@@ -50,7 +50,7 @@ match = ^.*?\.html$
 ; that NextRelease makes, tag git forme, and push these new changes to github.
 [@Git]
 ; Change tag formath to App-Fetchware-1.00 instead of just v1.00.
-tag_format = %N-$v
+tag_format = %N-%v
 
 [PodWeaver]
 
