Fixed optional Test::Expect bug in t/bin-fetchware-new.t
Test::Expect is "optional" for testing. That means that only if its "already"
installed will it be used. Perl does have a cool TestRequires mechanism, but
expect is wonky on Windows, and I don't want to worry about that, so I only want
to use Test::Expect if it's already installed. I do not want it installed for
testing like the whole TestRequires thing does.

Fix for test report:
http://www.cpantesters.org/cpan/report/48b619bc-5235-11e3-88f0-885982088f79

--- a/dist.ini
+++ b/dist.ini
@@ -84,6 +84,11 @@ Sub::Mage = 0
 ; Test::Deep is *only* used during testing, so say so.
 [Prereqs / TestRequires]
 Test::Deep = 0
+; Test::Expect is also only used during testing, but I don't want it "required
+; for testing, only used if it is already made available for testing. That's why
+; its commented out below, because I want it documented here, but I don't
+; actually want it required for testing.
+;;;Test::Expect = 
 
 ; Need some modules *only* on Windows.
 ; So far just Win32 for Win32::LoginName().
