Move UploadToCPAN after @Git stuff so git hooks run before its uploaded.
dzil does stuff in order, so because @Git is after UploadToCPAN it is run after,
but I want it done before, so that if there is a problem with the git stuff a
new version will *not* be uploaded to cpan.

--- a/dist.ini
+++ b/dist.ini
@@ -34,7 +34,6 @@ match = ^.*?\.html$
 [Manifest]
 [TestRelease]
 [ConfirmRelease]
-[UploadToCPAN]
 
 ; Add extra release only tests CPAN authors are expected to use.
 [Test::Perl::Critic]
@@ -42,9 +41,7 @@ match = ^.*?\.html$
 [PodSyntaxTests]
 
 ; Use NextRelease to automate updating the Changes file.
-; Basically requires UploadToCPAN to completely work right.
-; Why not just use it!!!
-;;;BUGALERT;;; Use UploadToCpan!!!
+; Requires UploadToCPAN to completely work right.
 [NextRelease]
 
 ; Use @Git bundle to check for uncommitted changes, commit my new Changes file
@@ -54,6 +51,8 @@ match = ^.*?\.html$
 tag_format = %N-%v
 
 [PodWeaver]
+
+[UploadToCPAN]
 
 ; List of non-core (as of 5.10.01) prereqs.
 ; Remember to make any changes to the list of prereqs in the README.
