Reviewed App::Fetchware's POD documentation.
It also involved some minor changes to weaver.ini and ExportAPI. These were some
minor typos, and adding missing info about new API subroutines new(),
new_install(), and check_syntax().

--- a/weaver.ini
+++ b/weaver.ini
@@ -31,6 +31,7 @@
 [Generic / USING YOUR App::Fetchware FETCHWAREFILE WITH FETCHWARE]
 [Generic / App::Fetchware'S FETCHWAREFILE CONFIGURATION OPTIONS]
 [Generic / FURTHER CUSTOMIZING YOUR FETCHWAREFILE]
+[Generic / EXAMPLE FETCHWAREFILES]
 [Generic / CREATING A FETCHWARE EXTENSION]
 [Generic / FETCHWAREFILE API SUBROUTINES]
 
