Fixed spelling typo causing MOTIVATION from not being weaved right.

--- a/weaver.ini
+++ b/weaver.ini
@@ -15,7 +15,7 @@
 ; have, and then Pod::Weaver will simply not include sections that don't exist.
 [Generic / SYNOPSIS]
 ; App::Fetchware::HTMLPageSync's MOTOVATION section.
-[Generic / MOTOVATION]
+[Generic / MOTIVATION]
 [Generic / DESCRIPTION]
 
 ; bin/fetchware's specific head1's.
