--- a/weaver.ini
+++ b/weaver.ini
@@ -36,7 +36,7 @@
 [Generic / FETCHWAREFILE API SUBROUTINES]
 
 ; App::Fetchware::HTMLPageSync's specific head1's.
-[Generic / CREATING A App::Fetchware::HTMLPageSync FETCHWAREFILE]
+[Generic / MANUALLY CREATING A App::Fetchware::HTMLPageSync FETCHWAREFILE]
 [Generic / USING YOUR App::Fetchware::HTMLPageSync FETCHWAREFILE WITH FETCHWARE]
 [Generic / HOW App::Fetchware::HTMLPageSync OVERRIDES App::Fetchware]
 [Generic / App::FetchwareX::HTMLPageSync API SUBROUTINES]
