Added File::HomeDir version 0.93+ as dependency due to needing my_dist_data().
I use File::HomeDir's my_dist_data() method, but it was only added in 0.93,
which was released after 5.10.1, the minimum version I support. Therefore, after
discovering this due to a CPAM Tester FAIL report, I added 0.93+ as a dependency
to dist.ini.

--- a/dist.ini
+++ b/dist.ini
@@ -75,7 +75,8 @@ Getopt::Long = 0
 Archive::Tar = 0
 Archive::Zip = 0
 Term::UI = 0
-File::HomeDir = 0
+; File::Homedir 0.93+ is needed for my_dist_data() method.
+File::HomeDir = 0.93
 HTTP::Tiny = 0
 HTML::TreeBuilder = 0
 Digest::SHA = 0
