Switch from PkgVersion to OurPkgVersion.
PkgVersion's annoying warning about there not being a blank line to insert the
version number is annoying, so I switched to OurPkgVersion which uses our, which
looks better, and uses a comment instead of blank line, which is both more
annoying and less annoying.

--- a/dist.ini
+++ b/dist.ini
@@ -22,7 +22,9 @@ match = ^.*?~$
 match = ^.*?\.html$
 ; Add the xt directory for author tests to skip shipping them in CPAN dists?
 [ManifestSkip]
-[PkgVersion]
+; Use alternative PkgVersion module to avoid line number change.
+; Note: OurPkgVersion requires an annoying "# Version" comment in each package.
+[OurPkgVersion]
 [MetaYAML]
 [License]
 ; Comment out Readme Plugin, because Fetchware provides its own README.
