--- a/dist.ini
+++ b/dist.ini
@@ -2,9 +2,9 @@ name    = App-Fetchware
 author  = David Yingling <deeelwy@gmail.com>
 license = Perl_5
 copyright_holder = David Yingling
-copyright_year   = 2013
+copyright_year   = 2016
 
-version = 1.014
+version = 1.015
 
 ; Change bugtracker to github
 [MetaResources]
@@ -38,7 +38,7 @@ match = ^.*?\.html$
 [ConfirmRelease]
 
 ; Add extra release only tests CPAN authors are expected to use.
-[Test::Perl::Critic]
+;[Test::Perl::Critic] Don't currently use Perl::Critic, so placeholder now.
 [PodCoverageTests]
 [PodSyntaxTests]
 
